# sophon-sail

./: .gitignore  CMakeLists.txt  GETPYTHON.md  LICENSE  README.md  build_unix.cmake  build_win.cmake
cmake/: SAILConfig.cmake  SAILConfig.cmake.in
cmake/BM168x_LoongArch64/: ToolChain_loongarch64_linux.cmake
cmake/BM168x_RISCV/: ToolChain_riscv64_linux.cmake
cmake/BM168x_SOC/: ToolChain_aarch64_linux.cmake
cmake/BM168x_SW64/: ToolChain_sw64_linux.cmake
docs/: Makefile
docs/common/: disclaimer_en.rst  disclaimer_zh.rst
docs/source_common/api/: sail_cpp.rst  sail_python.rst
docs/source_en/: 1_disclaimer.rst  3_build.rst  4_module_cpp.rst  5_module_python.rst  6_appendix.rst  conf.py  index.rst
docs/source_en/appendix/: get_image_wgt.rst  get_pythons.rst
docs/source_en/module/: sail.rst
docs/source_en/module_cpp/: cpp_BMImage.rst  cpp_BMImageArray.rst  cpp_Blend.rst  cpp_Bmcv.rst  cpp_Decoder.rst  cpp_Decoder_RawStream.rst  cpp_Encoder.rst  cpp_Engine.rst  cpp_Handle.rst  cpp_MultiDecoder.rst  cpp_MultiEngine.rst  cpp_PaddingAtrr.rst  cpp_Tensor.rst  cpp_basicfunction.rst  cpp_bm_image.rst
docs/source_en/module_cpp/0_enum-type/: cpp_Dtype.rst  cpp_Format.rst  cpp_IOMode.rst  cpp_ImgDtype.rst  cpp_bmcv_resize_algorithm.rst  cpp_sail_resize_type.rst  enum-index.rst
docs/source_en/module_cpp/1_high_perform_interface/: cpp_EngineImagePreProcess.rst  cpp_ImagePreProcess.rst  cpp_TensorPTRWithName.rst  cpp_algo_sort_tracker_controller.rst  cpp_algo_sort_tracker_controller_async.rst  cpp_algo_yolov5_post_1output.rst  cpp_algo_yolov5_post_3output.rst  cpp_algo_yolov5_post_cpu_opt.rst  cpp_algo_yolov5_post_cpu_opt_async.rst  cpp_algo_yolov8_post_1output_async.rst  cpp_algo_yolov8_post_cpu_opt_1output_async.rst  cpp_algo_yolox_post.rst  cpp_bytetrack_tracker_controller.rst  cpp_deepsort_tracker_controller.rst  cpp_deepsort_tracker_controller_async.rst  cpp_tpu_kernel_api_openpose_part_nms.rst  cpp_tpu_kernel_api_yolov5_detect_out.rst  cpp_tpu_kernel_api_yolov5_out_without_decode.rst  high_perform_index_cpp.rst
docs/source_en/module_python/: Basicfunction.rst  sail.BMImage.rst  sail.BMImageArray.rst  sail.Blend.rst  sail.Bmcv.rst  sail.Decoder.rst  sail.Decoder_RawStream.rst  sail.Encoder.rst  sail.Engine.rst  sail.Handle.rst  sail.MultiDecoder.rst  sail.MultiEngine.rst  sail.PaddingAtrr.rst  sail.Tensor.rst  sail.bm_image.rst
docs/source_en/module_python/0_enum_type/: enum_index.rst  sail.Dtype.rst  sail.Format.rst  sail.IOMode.rst  sail.ImgDtype.rst  sail.bmcv_resize_algorithm.rst  sail.sail_resize_type.rst
docs/source_en/module_python/1_high_perform_interface/: high_perform_index.rst  sail.EngineImagePreProcess.rst  sail.ImagePreProcess.rst  sail.TensorPTRWithName.rst  sail.algo_sort_tracker_controller.rst  sail.algo_sort_tracker_controller_async.rst  (+15 more)
docs/source_zh/: 1_disclaimer.rst  2_sail.rst  3_build.rst  4_module_cpp.rst  5_module_python.rst  6_appendix.rst  conf.py  index.rst
docs/source_zh/3_build/: 3.1_build_python.rst  3.2_build_cpp.rst  3.3_build_manual.rst
docs/source_zh/appendix/: get_image_wgt.rst  get_pythons.rst
docs/source_zh/module/: sail.rst
docs/source_zh/module_cpp/: cpp_BMImage.rst  cpp_BMImageArray.rst  cpp_Blend.rst  cpp_Bmcv.rst  cpp_Decoder.rst  cpp_Decoder_RawStream.rst  cpp_Encoder.rst  cpp_Engine.rst  cpp_Handle.rst  cpp_MultiDecoder.rst  cpp_MultiEngine.rst  cpp_PaddingAtrr.rst  cpp_Tensor.rst  cpp_basicfunction.rst  cpp_bm_image.rst
docs/source_zh/module_python/: Basicfunction.rst  sail.BMImage.rst  sail.BMImageArray.rst  sail.Blend.rst  sail.Bmcv.rst  sail.Decoder.rst  sail.Decoder_RawStream.rst  sail.Encoder.rst  sail.Engine.rst  sail.EngineLLM.rst  sail.Handle.rst  sail.MultiDecoder.rst  sail.MultiEngine.rst  sail.PaddingAtrr.rst  sail.Tensor.rst  sail.bm_image.rst
include/: algokit.h  base64.h  cvwrapper.h  decoder_multi.h  decoder_rawstream.h  encoder.h  engine.h  engine_llm.h  engine_multi.h  graph.h  ipc.h  perf.h  tensor.h  tools.h  tpu_kernel_api.h
pyis/: _algokit.pyi  _basic.pyi  _engine.pyi  _engine_llm.pyi  _high_performance.pyi  _kernel_api.pyi  _multimedia.pyi  sail.pyi  sail_onlyruntime.pyi
python/: __init__.py  setup.py  sophon_whl.sh
python/arm_pcie/: MANIFEST.in  setup.py
python/loongarch64/: setup.py
python/pcie/: MANIFEST.in  setup.py
python/riscv/: setup.py
python/soc/: setup.py  sophon_soc_whl.sh
python/sw64/: setup.py  sophon_sw64_whl.sh
python/windows/: MANIFEST.in  setup.py  sophon_windows_whl.sh
sample/IPC/: IPC_receiver.py  IPC_sender.py
sample/basic_interface/Engine_resnet50/: README.md
sample/basic_interface/Engine_resnet50/cpp/resnet50_bmcv/: CMakeLists.txt  main.cpp  processor.cpp  processor.h
sample/basic_interface/get_dev_stat/: README.md  get_dev_stat.py
sample/basic_interface/media_basic/: README.md
sample/convert_basic_class/cpp/: CMakeLists.txt  main.cpp
sample/convert_basic_class/python/: sample.py
sample/high_perf_interface/EngineImagePreProcess/: ppyolov3_multi_3output_pic.py
sample/high_perf_interface/EngineImagePreProcess/yolox/cpp/: CMakeLists.txt  test_yolox.cpp  test_yolox.h
sample/high_perf_interface/SORT/: SORT.py
sample/high_perf_interface/YOLOv5/: yolov5_multi_1output.py  yolov5_multi_1output_nmodels.py  yolov5_multi_3output.py  yolov5_multi_3output_pic.py
sample/sophon_faiss_service/: README.md  langchain_milvus_test.py  sophon_faiss_service.py
scripts/: sail_jenkins_review.sh  sail_release.sh
src/: CMakeLists.txt  algokit.cpp  base64.cpp  bind.cpp  cvwrapper.cpp  decoder_multi.cpp  encoder.cpp  engine.cpp  engine_llm.cpp  engine_multi.cpp  graph.cpp  internal.h  perf.cpp  tensor.cpp  tpu_kernel_api.cpp
src/bytetrack/: STrack.cpp  STrack.h  bytetrack.cpp  bytetrack.h  lapjv.cpp  lapjv.h  utils.cpp
src/deepsort/: dataType.h  hungarianoper.cpp  hungarianoper.h  linear_assignment.cpp  linear_assignment.h  model.cpp  model.h  nn_matching.cpp  nn_matching.h  track.cpp  track.h  tracker.cpp  tracker.h
src/kalmanfilter/: kalmanfilter.cpp  kalmanfilter.h
src/sort/: sort_track.cpp  sort_track.h  sort_tracker.cpp  sort_tracker.h
(+73 files in other folders)
